--- a/index.html
+++ b/index.html
@@ -22,10 +22,63 @@
   <meta name="theme-color" content="#fafafa">
 </head>
 
-<body>
-  <!-- Place your site's HTML here -->
-  <p>This text will display on your site! Jan 19</p>
-  <script src="js/main.js"></script>
-</body>
 
+
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cat Cafe</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+  <!-- Header -->
+  <header>
+    <div class="social-media-link">
+      <!-- Add your social media link here -->
+    </div>
+    <h1>Cat Cafe</h1>
+  </header>
+
+  <!-- Hero Section -->
+  <div class="hero-section">
+    <img src="cat_hero_image.jpg" alt="Cat Cafe Hero Image">
+  </div>
+
+  <!-- Navigation Bar -->
+  <nav>
+    <ul>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#menu">Menu</a></li>
+      <li><a href="#events">Events</a></li>
+      <li><a href="#gallery">Gallery</a></li>
+      <li><a href="#about">About Us</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <!-- Photo Carousel -->
+  <div class="photo-carousel">
+    <!-- Add your photo carousel content here -->
+  </div>
+
+ <!-- Two Columns Section -->
+ <div class="two-columns-section">
+  <div class="left-column">
+    <h2>About Us</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...</p>
+    <!-- Add more text hierarchy as needed -->
+    <a href="#link-to-photo">
+      <img src="left_column_image.jpg" alt="Left Column Image">
+    </a>
+  </div>
+
+  <div class="right-column">
+    <img src="vertical_photo.jpg" alt="Vertical Photo">
+    <!-- Add your contact form here -->
+  </div>
+</div>
+
+</body>
 </html>
