--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
 </head>
 
 
-
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -37,48 +36,111 @@
   <header>
     <div class="social-media-link">
       <!-- Add your social media link here -->
+      <a href="#" target="_blank">Social Media</a>
     </div>
     <h1>Cat Cafe</h1>
   </header>
 
-  <!-- Hero Section -->
+  <!-- Hero Section - Image Carousel -->
   <div class="hero-section">
-    <img src="cat_hero_image.jpg" alt="Cat Cafe Hero Image">
+    <div class="carousel">
+      <img src="img/image1.png" alt="Cat Image 1">
+      <img src="img/image2.png" alt="Cat Image 2">
+      <img src="img/image3.png" alt="Cat Image 3">
+      <img src="img/image4.png" alt="Cat Image 4">
+      <img src="img/image5.png" alt="Cat Image 5">
+      <img src="img/image1.png" alt="Cat Image 6">
+      <img src="img/image2.png" alt="Cat Image 7">
+      <img src="img/image3.png" alt="Cat Image 8">
+      <img src="img/image4.png" alt="Cat Image 9">
+      <img src="img/image5.png" alt="Cat Image 10">
+    </div>
   </div>
 
   <!-- Navigation Bar -->
   <nav>
     <ul>
-      <li><a href="#home">Home</a></li>
-      <li><a href="#menu">Menu</a></li>
-      <li><a href="#events">Events</a></li>
-      <li><a href="#gallery">Gallery</a></li>
-      <li><a href="#about">About Us</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="home.html">Home</a></li>
+      <li><a href="menu.html">Menu</a></li>
+      <li><a href="cats.html">Cats</a></li>
+      <li><a href="local_shelters.html">Local Shelters</a></li>
+      <li><a href="contact.html">Contact</a></li>
     </ul>
   </nav>
 
-  <!-- Photo Carousel -->
-  <div class="photo-carousel">
-    <!-- Add your photo carousel content here -->
+  <!-- Two Columns Section -->
+  <div class="two-columns-section">
+    <div class="left-column">
+      <h2>About Us</h2>
+      <p>Here at Sophia's Cat Café, cats are our passion.<p>
+      </p> back in 2020, we are committed to bringing Baton Rouge the freshest farm-to-table plant-based culinary creations while introducing you to our wonderful critters.</p>
+    </p> of our cats coming from local shelters and are open for adoption. We welcome you to meet our furry friends and have a warm drink. </p>
+      <!-- Add more text hierarchy as needed -->
+      
+      <a href="https://www.google.com/maps/place/Cat+Haven/@30.4322133,-91.0601598,17z/data=!4m6!3m5!1s0x8626a35540267c71:0xfbb0149f0a3e3bca!8m2!3d30.4323567!4d-91.0597736!16s%2Fg%2F1262y4439?entry=ttu"> <!-- Replace "map.html" with the actual URL of your map page -->
+        <img src="img/map.png" alt="Map Link">
+      </a>
+    </div>
+
+    <div class="right-column">
+      <img src="img/vertical_photo.png" alt="Vertical Photo">
+      <!-- Add your contact form here -->
+      <form action="#" method="post">
+        <!-- Add your form fields here -->
+      </form>
+    </div>
   </div>
 
- <!-- Two Columns Section -->
- <div class="two-columns-section">
-  <div class="left-column">
-    <h2>About Us</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. ...</p>
-    <!-- Add more text hierarchy as needed -->
-    <a href="#link-to-photo">
-      <img src="left_column_image.jpg" alt="Left Column Image">
-    </a>
-  </div>
+</body>
+</html>
 
-  <div class="right-column">
-    <img src="vertical_photo.jpg" alt="Vertical Photo">
-    <!-- Add your contact form here -->
-  </div>
-</div>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Footer Example</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+  <!-- Your website content goes here -->
+
+  <!-- Footer -->
+  <footer>
+    <div class="footer-content">
+      <div class="contact-form">
+        <h3>Contact Us</h3>
+        <form action="#" method="post">
+          <!-- Add your contact form fields here -->
+          <label for="name">Name:</label>
+          <input type="text" id="name" name="name" required>
+
+          <label for="email">Email:</label>
+          <input type="email" id="email" name="email" required>
+
+          <label for="message">Message:</label>
+          <textarea id="message" name="message" required></textarea>
+
+          <button type="submit">Submit</button>
+        </form>
+      </div>
+
+      <div class="search-bar">
+        <h3>Search</h3>
+        <input type="text" placeholder="Search...">
+        <button type="button">Go</button>
+      </div>
+
+      <div class="address">
+        <h3>Visit Us</h3>
+        <p>North Harrells Ferry Road, Baton Rouge, LA</p>
+        <p>Email: info@catcafe.com</p>
+        <p>Phone: (555) 123-4567</p>
+      </div>
+    </div>
+  </footer>
 
 </body>
 </html>
