--- a/contact.html
+++ b/contact.html
@@ -24,8 +24,47 @@
 
 <body>
   <!-- Place your site's HTML here -->
-  <p>This text will display on your site! Jan 19</p>
-  <script src="js/main.js"></script>
-</body>
+ 
 
+</html>
+
+
+
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cat Cafe Information</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+ 
+
+ 
+  <section class="additional-information">
+    <h6>Contact Information</h6>
+    <p>
+      For inquiries and support, please reach out to us at:
+      <br>
+      Email: <a href="mailto:info@catcafe.com">info@catcafe.com</a>
+      <br>
+      Phone: (555) 123-4567
+    </p>
+
+    <h6>Adoption Information</h6>
+    <p>
+      Interested in adopting a furry friend from our cafe?
+      Visit our adoption page for details on the process.
+      <br>
+      <a href="adoption.html">Adoption Information</a>
+    </p>
+
+    <h6>Extra Information</h6>
+    <p>
+      Discover the joy of spending time with cats while enjoying your favorite beverages. Cat cafes offer a unique and relaxing environment where you can connect with adorable feline friends. Whether you're a cat enthusiast or just looking for a cozy place to unwind, cat cafes provide a purrfect experience for everyone.
+    </p>
+  </section>
+
+</body>
 </html>
