--- a/menu.html
+++ b/menu.html
@@ -24,8 +24,44 @@
 
 <body>
   <!-- Place your site's HTML here -->
-  <p>This text will display on your site! Jan 19</p>
-  <script src="js/main.js"></script>
-</body>
 
+
+  <html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cat Cafe Menu</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+
+
+  <section class="menu-section">
+    <div class="menu-images">
+      <img src="img/menu2.png" alt="Menu Item 1">
+      <img src="img/menu1.png" alt="Menu Item 2">
+     
+    </div>
+
+    <div class="menu-list">
+      <h2>Menu</h2>
+      <ul>
+        <li>
+          <h3>Meowoccino</h3>
+          <p>A classic cappuccino with a playful twist. It's a purr-fect blend of espresso, steamed milk, and a frothy milk foam, garnished with a cute cat-shaped latte art on top.</p>
+        </li>
+        <li>
+          <h3>Catnip Chiller</h3>
+          <p>A non-caffeinated, herbal iced tea infused with catnip and a blend of refreshing herbs. It's a chilled beverage perfect for relaxation.</p>
+        </li>
+        <li>
+          <h3>Mew-cha Latte -</h3>
+          <p>A matcha latte for the adventurous. Made with premium matcha green tea powder, steamed milk, and a hint of sweetness, it provides a vibrant green color and earthy taste.</p>
+        </li>
+      
+      </ul>
+    </div>
+  </section>
+
+</body>
 </html>
