--- a/Cats and local shelters.html
+++ b/Cats and local shelters.html
@@ -45,27 +45,27 @@
     <!-- First Row -->
     <div class="cat-item">
       <img src="img/cat1.png" alt="Cat 1">
-      <h4>NALA</h4>
-      <p>Nala is a sweet and gentle cat with a coat. Known for her calm demeanor, Nala enjoys lounging in comfortable spots and receiving gentle pets from her human friends.</p>
+      <h4>WILLOW</h4>
+      <p>Willow is a sweet and gentle cat with a coat. Known for her calm demeanor, Nala enjoys lounging in comfortable spots and receiving gentle pets from her human friends.</p>
     </div>
 
     <div class="cat-item">
       <img src="img/cat2.png" alt="Cat 2">
-      <h4>CLEO</h4>
-      <p>Cleo is a sophisticated Siamese cat with striking blue eyes and a vocal personality. She loves engaging in conversations and is known for her affectionate nature.</p>
+      <h4>LUNA</h4>
+      <p>Luna is a sophisticated Siamese cat with striking blue eyes and a vocal personality. She loves engaging in conversations and is known for her affectionate nature.</p>
     </div>
 
     <!-- Second Row -->
     <div class="cat-item">
       <img src="img/cat3.png" alt="Cat 3">
-      <h4>LUNA</h4>
-      <p> Luna is a sleek and elegant black cat with mesmerizing green eyes. This mysterious feline enjoys lounging in sunny spots and is known for her gentle and affectionate demeanor.</p>
+      <h4>LOUIE</h4>
+      <p> Louie is a sleek and elegant black cat with mesmerizing green eyes. This mysterious feline enjoys lounging in sunny spots and is known for her gentle and affectionate demeanor.</p>
     </div>
 
     <div class="cat-item">
       <img src="img/cat4.png" alt="Cat 4">
-      <h4>MISTY</h4>
-      <p>Misty is a short hair gray cat with a calm and laid-back personality. She enjoys cozying up in warm blankets and is the perfect companion for a lazy afternoon.</p>
+      <h4>PHOEBE</h4>
+      <p>Phoebe is a short hair gray cat with a calm and laid-back personality. She enjoys cozying up in warm blankets and is the perfect companion for a lazy afternoon.</p>
     </div>
   </section>
 
@@ -76,27 +76,27 @@
   <!-- First Row -->
   <div class="cat-item">
     <img src="img/menu4.png" alt="Cat 1">
-    <h4>SIMBA</h4>
-    <p>Simba is a majestic orange tabby with a regal presence. This charismatic cat loves to be the center of attention and has a playful spirit that brightens everyone's day.</p>
+    <h4>GINGER</h4>
+    <p>Ginger is a majestic orange tabby with a regal presence. This charismatic cat loves to be the center of attention and has a playful spirit that brightens everyone's day.</p>
   </div>
 
   <div class="cat-item">
     <img src="img/menu5.png" alt="Cat 2">
-    <h4>OLIVER</h4>
-    <p>Oliver is a mischievous tuxedo cat with a penchant for mischief. This curious little guy loves to explore and is always finding new hiding spots to surprise his human friends.</p>
+    <h4>NOODLE</h4>
+    <p>Noodle is a mischievous tuxedo cat with a penchant for mischief. This curious little guy loves to explore and is always finding new hiding spots to surprise his human friends.</p>
   </div>
 
   <!-- Second Row -->
   <div class="cat-item">
     <img src="img/menu6.png" alt="Cat 3">
-    <h4>MAX</h4>
-    <p>Max is a playful and energetic calico cat with a unique mix of colors. This lively feline enjoys interactive toys and is always ready for a game of chase or a good cuddle session.</p>
+    <h4>Sebas</h4>
+    <p>Sebas is a playful and energetic calico cat with a unique mix of colors. This lively feline enjoys interactive toys and is always ready for a game of chase or a good cuddle session.</p>
   </div>
 
   <div class="cat-item">
     <img src="img/cat8.png" alt="Cat 4">
-    <h4>WHISKERS</h4>
-    <p>Whiskers is an adventurous tabby cat with distinctive long whiskers. Known for his playful nature and love of climbing, Whiskers is always exploring new heights around the house.</p>
+    <h4>Alexander</h4>
+    <p>Alex is an adventurous tabby cat with distinctive long whiskers. Known for his playful nature and love of climbing, Whiskers is always exploring new heights around the house.</p>
   </div>
 </section>
 
