--- a/Cats and local shelters.html
+++ b/Cats and local shelters.html
@@ -150,3 +150,10 @@
 
 </body>
 </html>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Responsive HTML</title>
+  <link rel="stylesheet" href="styles.css">
+</head>
